# scOmnom

./: .gitignore  AGENTS.md  API_REFERENCE.md  JAX NOTES.txt  LICENSE  README.md  TEMP_GSEA_STORAGE_SPEC.md  annotation_utils.py  changelog.md  compaction_utils.py  contributing.md  environment.yml  environment_linux.yml  environment_macos.yml  mkdocs.yml  plot_function_inventory.tsv  pull_request_template.md  pyproject.toml  readme.md
docs/: adata-ops.md  adata-structure.md  api-reference.md  changelog.md  cluster-and-annotate.md  design-goals.md  hpc-slurm.md  index.md  installation.md  integrate.md  load-and-filter.md  manual.md  markers-and-de.md  output-organization.md  pipeline-overview.md  reporting.md  usage.md
notebooks/: 01_load_rename_save.ipynb  02_load_subset_save.ipynb  03_load_and_plot_all_de_functions.ipynb
scripts/: run_with_mem_limit.py
slurm/: scomnom_10_ccc.job  scomnom_1_load_and_filter.job  scomnom_2_integrate.job  scomnom_3_cluster_and_annotate.job  scomnom_4_integrate_annotated_run.job  scomnom_4_markers.job  scomnom_4a_subset.job  scomnom_4b_annotation_merge.job  scomnom_5_integrate_annotated_run.job  scomnom_5_rename.job  scomnom_5a_rename_archetypes.job  scomnom_5a_subset.job  scomnom_5b_annotation_merge.job  scomnom_6_de.job  scomnom_6_rename.job  scomnom_6a_rename_archetypes.job  scomnom_7_da.job  scomnom_7_de.job  scomnom_8_da.job  scomnom_8_enrichment_cluster.job  scomnom_9_enrichment_cluster.job  scomnom_cluster_and_annotate.job  scomnom_integrate.job  scomnom_loadandfilter.job  scomnom_template.job
synthetic_demo_results/: temp_input.h5ad
tests/: test_adata_ops_import.py  test_adata_ops_metadata.py  test_adata_ops_subset.py  test_cell_qc.py  test_celltypist_scraper.py  test_cli.py  test_cluster_and_annotate.py  test_config.py  test_ct_utils.py  test_integrate.py  test_load_and_qc.py  (+5 more)
(+3783 files in other folders)
