[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scomnom"
version = "0.1.3"
description = "Modular scRNA-seq preprocessing and analysis pipeline built on the scVerse ecosystem."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Koen Prange", email = "info@prangelab.org" }
]

dependencies = [
  "scanpy",
  "anndata",
  "zarr",
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "seaborn",
  "typer",
  "pydantic",
  "scrublet",
  "leidenalg",
  "python-igraph",
  "joblib",
  "kneed",
  "h5py",
  "psutil",
  "umap-learn",
  "celltypist",
  "requests",
  "decoupler",
]

[project.scripts]
scomnom = "scomnom.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
