[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scomnom"
version = "0.3.1"
description = "Modular scRNA-seq preprocessing and analysis pipeline built on the scVerse ecosystem."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Koen Prange", email = "info@prangelab.org" }
]

dependencies = [
  "scanpy>=1.11.5",
  "anndata>=0.12.7",
  "zarr>=3.1.5",
  "numcodecs>=0.16.5",
  "numpy>=2.3.5",
  "pandas>=2.3.3",
  "scipy>=1.15.3",
  "matplotlib",
  "seaborn",
  "typer",
  "pydantic",
  "scrublet",
  "leidenalg",
  "python-igraph",
  "joblib",
  "kneed",
  "h5py>=3.15.1",
  "psutil",
  "umap-learn",
  "celltypist",
  "requests",
  "decoupler",
  "scvi-tools",
  "pydeseq2",
  "statsmodels",
  "pertpy",
  "pybiomart",
]

[project.scripts]
scomnom = "scomnom.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
